--- a/InventoryView.csproj
+++ b/InventoryView.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{ED643773-8241-415F-B286-AFAC4D277D33}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AssemblyName>InventoryView</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <ApplicationVersion>1.0.0.0</ApplicationVersion>
     <FileAlignment>512</FileAlignment>
     <RootNamespace>InventoryView</RootNamespace>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
